=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.99

    beta20

    * -j startup option for use with "geowalls", geowall stereo support

    * "Opaque" option in background menu

    * checker background patter for alpha channel: show_alpha_checker

    beta19

    * fixed alpha channel handling for edges -- now combining correctly

    * opaque_background setting for OpenGL rendering

    beta17 & beta18

    * "import pymol" finally works -- worked around _tkinter gotcha!
    
    beta16

    * dpi option to png command and image_dots_per_inch setting

    * reading and saving of stereo images

    * now renders stereo pairs in both side-by-side and QB stereo modes

    * fixed valence assignment for HIS and other polymeric residues
      with various names

    * some fixes and extra residues added to parameter assignment code

    * color by explicit 24-bit hex RGB triplets: 0xffffff

    * unicode hyphens in selections now converted to ASCII dashes

    * patched memory leak with dihedral display

    beta15

    * possible bug fix for settings storage related to corrupted sessions?

    beta14

    * delete command no longer allows partial names

    * updates for chempy bricks

    * fixed bug in case matching for the selection engine

    * Python API work

    beta13

    * fixed botched beta12 build for windows

    beta12

    * better mouse-handling in horizontal split-screen stereo

    * fixed setting side effects bug introduced in beta 11

    * faster transparency drawing (sorting)

    beta11

    * fixed some longstanding but minor ranging errors in isomesh and
      isosurf 

    * map_trim command

    beta10

    * cartoon_loop_cap and cartoon_tube_cap settings

    * fixed latent memory-crash bug in align
    
    * fixed min/max issues with maps, alignment, and extents (blush)
    